--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "nodemon dist/index.js",
-    "build": "tsc",
+    "build": "tsc --project tsconfig.json",
     "build:dev": "tsc --watch --preserveWatchOutput",
     "dev": "concurrently \"npm:build:dev\" \"npm:start:dev\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register tests/*"
   },
   "repository": {
     "type": "git",
@@ -26,9 +26,15 @@
     "typescript": "^4.0.2"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.12",
     "@types/express": "^4.17.7",
+    "@types/mocha": "^8.0.3",
     "@types/socket.io": "^2.1.11",
+    "chai": "^4.2.0",
     "concurrently": "^5.3.0",
-    "nodemon": "^2.0.4"
+    "mocha": "^8.1.2",
+    "nodemon": "^2.0.4",
+    "socket.io-client": "^2.3.0",
+    "ts-node": "^9.0.0"
   }
 }
